--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: python
+sudo: required
+#this is the configuratiuon for travis the rules and such that it needs to follow
 
+services:
+  - docker
+ 
 script:
   - python -m pytest -v
+after_success:
+  - sh .travis/deploy_dockerhub.sh
